--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -89,6 +89,15 @@
     <filter-name>ThreadLocalSessionProviderInitializedFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+
+  <filter>
+    <filter-name>OutlookLoginFilter</filter-name>
+    <filter-class>org.exoplatform.outlook.server.filter.LoginFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>OutlookLoginFilter</filter-name>
+    <url-pattern>/app/*</url-pattern>
+  </filter-mapping>
   
   <listener>
     <listener-class>org.exoplatform.container.web.PortalContainerConfigOwner</listener-class>
