--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -161,7 +161,7 @@
       <artifactId>slf4j-api</artifactId>
       <scope>provided</scope>
     </dependency>
-    
+
   </dependencies>
   <build>
     <resources>
@@ -195,17 +195,24 @@
       <plugin>
         <groupId>com.github.eirslett</groupId>
         <artifactId>frontend-maven-plugin</artifactId>
-        <version>1.6</version>
         <configuration>
-          <nodeVersion>v8.11.3</nodeVersion>
-          <npmVersion>6.1.0</npmVersion>
-          <workingDirectory>src/main/webapp/WEB-INF/views/react</workingDirectory>
+          <installDirectory>target</installDirectory>
         </configuration>
         <executions>
           <execution>
             <id>install node and npm</id>
             <goals>
               <goal>install-node-and-npm</goal>
+            </goals>
+            <configuration>
+              <nodeVersion>v12.13.1</nodeVersion>
+              <npmVersion>6.12.1</npmVersion>
+            </configuration>
+          </execution>
+          <execution>
+            <id>npm config</id>
+            <goals>
+              <goal>npm</goal>
             </goals>
           </execution>
           <execution>
@@ -224,6 +231,13 @@
             </configuration>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <configuration>
+          <packagingExcludes>**/*.less,**/*.jsx,css/lib/*,reactjs-app/**,js/mock/**/*,**-dev.*</packagingExcludes>
+        </configuration>
       </plugin>
     </plugins>
   </build>
