--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -236,7 +236,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <configuration>
-          <packagingExcludes>**/*.less,**/*.jsx,css/lib/*,reactjs-app/**,js/mock/**/*,**-dev.*</packagingExcludes>
+          <packagingExcludes>**/*.less,**/*.jsx,css/lib/*,react-app/**,js/mock/**/*,**-dev.*</packagingExcludes>
         </configuration>
       </plugin>
     </plugins>
