--- a/webapp/package.json
+++ b/webapp/package.json
@@ -18,29 +18,32 @@
     "@babel/core": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
+    "acorn": "^7.1.0",
     "babel-loader": "^8.0.6",
+    "browserslist": "^4.7.3",
     "copy-webpack-plugin": "^5.0.5",
-    "style-loader": "^1.0.0",
     "css-loader": "^3.2.0",
+    "eslint": "^6.7.1",
     "jest": "^24.9.0",
-    "jquery": "^3.3.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.0",
-    "eslint": "^6.7.1",
-    "acorn": "^7.1.0",
-    "browserslist": "^4.7.3",
-    "typescript": "^3.7.2",
+    "style-loader": "^1.0.0",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.5",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "@types/jest": "^25.1.2",
+    "@types/node": "^13.7.1",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
     "axios": "^0.19.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0",
-    "react-tooltip": "^3.11.2"
+    "react-scripts": "3.2.0"
   }
 }
