--- a/webapp/package.json
+++ b/webapp/package.json
@@ -18,6 +18,7 @@
     "@babel/core": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
+    "@types/office-js": "^1.0.74",
     "acorn": "^7.1.0",
     "babel-loader": "^8.0.6",
     "browserslist": "^4.7.3",
