--- a/webapp/package.json
+++ b/webapp/package.json
@@ -43,6 +43,7 @@
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "axios": "^0.19.2",
+    "office-ui-fabric-react": "^7.93.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0"
