Added Spring HATEOAS dependencies

--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -162,6 +162,19 @@
       <scope>provided</scope>
     </dependency>
 
+    <!-- Spring HATEOAS -->
+
+    <dependency>
+      <groupId>org.springframework.hateoas</groupId>
+      <artifactId>spring-hateoas</artifactId>
+      <version>0.25.1.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.plugin</groupId>
+      <artifactId>spring-plugin-core</artifactId>
+      <version>1.2.0.RELEASE</version>
+    </dependency>
+
   </dependencies>
   <build>
     <resources>
