--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,7 +10,9 @@
     "start": "webpack --config webpack.dev.js --mode development",
     "dev": "webpack-dev-server --config webpack.dev.js --mode development --hot",
     "watch": "webpack --config webpack.dev.js --progress --colors --watch -d",
-    "build": "webpack --config webpack.prod.js --mode production"
+    "build": "webpack --config webpack.prod.js --mode production",
+    "lint": "office-addin-lint check --files src/main/webapp/react-app/**/*.{ts,tsx,js,jsx}",
+    "lint:fix": "office-addin-lint fix --files src/main/webapp/react-app/**/*.{ts,tsx,js,jsx}"
   },
   "author": "eXo",
   "license": "LGPL",
@@ -18,17 +20,23 @@
     "@babel/core": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
+    "@satazor/eslint-config": "^3.2.0",
+    "@shinnn/eslint-config": "^7.0.0",
     "@types/office-js": "^1.0.74",
     "acorn": "^7.1.0",
     "babel-loader": "^8.0.6",
     "browserslist": "^4.7.3",
     "copy-webpack-plugin": "^5.0.5",
     "css-loader": "^3.2.0",
-    "eslint": "^6.7.1",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-office-addins": "^0.1.4",
     "jest": "^24.9.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.0",
+    "office-addin-debugging": "^3.0.22",
+    "office-addin-lint": "^1.0.18",
     "style-loader": "^1.0.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
@@ -42,6 +50,8 @@
     "@types/node": "^13.7.1",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "@typescript-eslint/eslint-plugin": "^2.19.2",
+    "@typescript-eslint/parser": "^2.19.2",
     "axios": "^0.19.2",
     "office-ui-fabric-react": "^7.93.0",
     "react": "^16.12.0",
