--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,7 +12,8 @@
     "watch": "webpack --config webpack.dev.js --progress --colors --watch -d",
     "build": "webpack --config webpack.prod.js --mode production",
     "lint": "office-addin-lint check --files src/main/webapp/react-app/**/*.{ts,tsx,js,jsx}",
-    "lint:fix": "office-addin-lint fix --files src/main/webapp/react-app/**/*.{ts,tsx,js,jsx}"
+    "lint:fix": "office-addin-lint fix --files src/main/webapp/react-app/**/*.{ts,tsx,js,jsx}",
+    "mock:api": "json-server --watch src/main/webapp/react-app/apis/exo.json --port 4000"
   },
   "author": "eXo",
   "license": "LGPL",
