Changed response to the PagedResources format; changed the path for RestLoginFilter (/v2/*)

--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -105,7 +105,7 @@
   </filter>
   <filter-mapping>
     <filter-name>OutlookRestLoginFilter</filter-name>
-    <url-pattern>/exo/*</url-pattern>
+    <url-pattern>/v2/*</url-pattern>
   </filter-mapping>
 
   <listener>
