--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -187,6 +187,14 @@
       <version>1.2.0.RELEASE</version>
     </dependency>
 
+    <!-- NodetypeConstant -->
+
+    <dependency>
+      <groupId>org.exoplatform.ecms</groupId>
+      <artifactId>ecms-core-webui</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
   <build>
     <resources>
