--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -96,7 +96,7 @@
   </filter>
   <filter-mapping>
     <filter-name>OutlookLoginFilter</filter-name>
-    <url-pattern>/app/*</url-pattern>
+    <url-pattern>/app/view/*</url-pattern>
   </filter-mapping>
 
   <filter>
@@ -105,7 +105,7 @@
   </filter>
   <filter-mapping>
     <filter-name>OutlookRestLoginFilter</filter-name>
-    <url-pattern>/v2/*</url-pattern>
+    <url-pattern>/app/v2/*</url-pattern>
   </filter-mapping>
 
   <listener>
