--- a/webapp/package.json
+++ b/webapp/package.json
@@ -55,6 +55,7 @@
     "@typescript-eslint/parser": "^2.19.2",
     "axios": "^0.19.2",
     "office-ui-fabric-react": "^7.93.0",
+    "query-string": "^6.11.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0"
