--- a/webapp/tsconfig.json
+++ b/webapp/tsconfig.json
@@ -10,7 +10,7 @@
       "removeComments": false,
       "outDir": "dist",
       "allowUnusedLabels": false,
-      "noImplicitReturns": true,
+      "noImplicitReturns": false,
       "noUnusedParameters": true,
       "noUnusedLocals": true,
       "lib": [
