--- a/webapp/package.json
+++ b/webapp/package.json
@@ -57,6 +57,7 @@
     "office-ui-fabric-react": "^7.93.0",
     "query-string": "^6.11.1",
     "react": "^16.12.0",
+    "react-contenteditable": "^3.3.3",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0"
   }
