--- a/webapp/package.json
+++ b/webapp/package.json
@@ -54,10 +54,13 @@
     "@typescript-eslint/eslint-plugin": "^2.19.2",
     "@typescript-eslint/parser": "^2.19.2",
     "axios": "^0.19.2",
+    "i18next": "^19.3.2",
+    "i18next-xhr-backend": "^3.2.2",
     "office-ui-fabric-react": "^7.93.0",
     "react": "^16.12.0",
     "react-contenteditable": "^3.3.3",
     "react-dom": "^16.12.0",
+    "react-i18next": "^11.3.3",
     "react-scripts": "3.2.0"
   }
 }
